replace "get(0)" to "getFirst()"